@@ -1,3 +1,9 @@
+2002-07-05  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* shapeinf.{cc,h}:  Figured out 'actor frame' flags in Weapon_info.
+	* actors.cc,etc:  Rewrote get_attack_frames() to use the 'frame'
+	flags in Weapon_info.
+
 2002-07-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* exult.cc: fixed --buildmap
 	* autogen.sh: fixed problem when automake was compiled with aclocal
